Fix broken navigation bar on mobile (#19063)
Closes #19063

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -465,7 +465,8 @@ label[for="searchbox"]{
   margin: 0;
   max-width: 100%;
   display: flex;
-  gap: 20px;
+  flex-wrap: wrap;
+  gap: 0 20px;
 }
 
 .topbar ul li {
